After resolving IntelliJ-reported issues in com.srscicomp.fc.ui, .data, .matlab, .resources, and .fypml.